# av-technical-assessment-z5462281

./: CMakeLists.txt
Q1/: Question-1.cc  output.txt
Q2/: Question-2.cc  Question-2.test.cc  assumptions.txt
Q3/: Question-3.cc
